--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.10",
