--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "bcrypt": "^5.1.0",
+    "class-validator": "^0.13.2",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
